--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 
 .livros {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
 }
 
